tests/ui/traits/const-traits/super-traits-fail-2.nn.stderr
error: `[const]` is not allowed here
  --> $DIR/super-traits-fail-2.rs:11:10
   |
LL | trait Bar: [const] Foo {}
   |          ^^^^^^^^^
   |
note: this trait is not a `#[const_trait]`, so it cannot have `[const]` trait bounds
  --> $DIR/super-traits-fail-2.rs:11:1
   |
LL | trait Bar: [const] Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:11:10
   |
LL | trait Bar: [const] Foo {}
   |          ^^^^^^^^^ can't be applied to `Foo`
   |
help: mark `Foo` as `#[const_trait]` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Foo {
   | ++++++++++++++

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:11:10
   |
LL | trait Bar: [const] Foo {}
   |          ^^^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `#[const_trait]` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Foo {
   | ++++++++++++++

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:11:10
   |
LL | trait Bar: [const] Foo {}
   |          ^^^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `#[const_trait]` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Foo {
   | ++++++++++++++

error[E0015]: cannot call non-const method `<T as Foo>::a` in constant functions
  --> $DIR/super-traits-fail-2.rs:20:7
   |
LL |     x.a();
   |       ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0015`.
